# text-editor

./: CMakeLists.txt
includes/: application.hpp  button.hpp  colors.hpp  component2d.hpp  container.hpp  cursor.hpp  event.hpp  key.hpp  keyboard.hpp  label.hpp  panel.hpp  textarea.hpp  timer.hpp  window.hpp
src/: CMakeLists.txt  application.cpp  button.cpp  container.cpp  cursor.cpp  keyboard.cpp  label.cpp  main.cpp  panel.cpp  textarea.cpp  timer.cpp  window.cpp
